5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1637_2445.log
== TEST (2019-04-11 10:42:05) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))
celcius = (5/9) * (F - 32)
faren = (C / (5/9)) + 32
if (esc.upper() == C):
	print(round(celcius,2))
if (esc.upper() == F):
	print(round(faren,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    celcius = (5/9) * (F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:42:37) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))
celcius = (5/9) * (F - 32)
faren = (C / (5/9)) + 32
if (esc.upper() == C):
	print(round(celcius,2))
if (esc.upper() == F):
	print(round(faren,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    celcius = (5/9) * (F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:50:36) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))
if (esc.upper() == C):
	conv = (5/9) * (temp - 32)
if (esc.upper() == F):
	conv = (temp / (5/9)) + 32
print(round(conv,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (esc.upper() == C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:52:54) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))
if (esc.upper() == C):
	conv = (5/9) * (temp - 32)
	
if (esc.upper() == F):
	conv = (temp / (5/9)) + 32
print(round(conv,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (esc.upper() == C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:53:13) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))
if (esc.upper() == C):
	conv = (5/9) * (temp - 32)
	
if (esc.upper() == F):
	conv = (temp / (5/9)) + 32
print(round(conv,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (esc.upper() == C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:53:37) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))
if (esc.upper() == F):
	conv = (5/9) * (temp - 32)
	
if (esc.upper() == F):
	conv = (temp / (5/9)) + 32
print(round(conv,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (esc.upper() == F):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:55:12) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))

if (esc.upper() == C):
	conv = (5/9) * (temp - 32)
	
if (esc.upper() == F):
	conv = (temp / (5/9)) + 32
	
print(round(conv,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (esc.upper() == C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:55:41) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))

if (esc.upper() == C):
	conv = (5/9) * (temp - 32)
	
else (esc.upper() == F):
	conv = (temp / (5/9)) + 32
	
print(round(conv,2))
	
	
-- ERROR:
File "XXXX", line 7
    else (esc.upper() == F):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:55:58) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))

if (esc.upper() == C):
	conv = (5/9) * (temp - 32)
	
if (esc.upper() == F):
	conv = (temp / (5/9)) + 32
	
print(round(conv,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (esc.upper() == C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:56:03) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))

if (esc.upper() == C):
	conv = (5/9) * (temp - 32)
	
if (esc.upper() == F):
	conv = (temp / (5/9)) + 32
	
print(round(conv,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (esc.upper() == C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:57:02) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))

if (esc.upper() == C):
	conv = (5/9) * (temp - 32)
	
if (esc.upper() == F):
	conv = (temp / (5/9)) + 32
	
print(round(conv,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (esc.upper() == C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:57:26) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))

if (esc.upper() == "C"):
	conv = (5/9) * (temp - 32)
	
if (esc.upper() == "F"):
	conv = (temp / (5/9)) + 32
	
print(round(conv,2))
	
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:58:14) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))

if (esc.upper() == "F"):
	conv = (5/9) * (temp - 32)
	
if (esc.upper() == "C"):
	conv = (temp / (5/9)) + 32
	
print(round(conv,2))
	
	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:58:37) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))

if (esc.upper() == "F"):
	conv = (5/9) * (temp - 32)
	
if (esc.upper() == "C"):
	conv = (temp / (5/9)) + 32
	
print(round(conv,2))
	
	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:58:45) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))

if (esc.upper() == "F"):
	conv = (5/9) * (temp - 32)
	
if (esc.upper() == "C"):
	conv = (temp / (5/9)) + 32
	
print(round(conv,2))
	
	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:58:54) 
-- CODE:
esc = input("digite a escala desejada: ")
temp = float(input("digite a temperatura: "))

if (esc.upper() == "F"):
	conv = (5/9) * (temp - 32)
	
if (esc.upper() == "C"):
	conv = (temp / (5/9)) + 32
	
print(round(conv,2))
	
	
-- EXECUTION TIME:
0.165734
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
